[gd_scene load_steps=11 format=2]

[ext_resource path="res://Screens/ChooseScreen.gd" type="Script" id=1]
[ext_resource path="res://Enemies/DialogBoxScary.png" type="Texture" id=2]
[ext_resource path="res://World/Nothing.png" type="Texture" id=3]
[ext_resource path="res://Enemies/FriendKill.png" type="Texture" id=4]
[ext_resource path="res://Enemies/RedLights.png" type="Texture" id=5]
[ext_resource path="res://Screens/RedEnter.png" type="Texture" id=6]
[ext_resource path="res://Enemies/ScaryFace.png" type="Texture" id=7]

[sub_resource type="Theme" id=1]

[sub_resource type="Animation" id=2]
resource_name = "End"
length = 3.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite4:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 513, 188 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite4:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Dialog" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 514, 300 )
scale = Vector2( 32.4375, 19.3125 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 502.5, 581.5 )
scale = Vector2( 10.9271, 4.34375 )
texture = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 108.0
margin_top = 489.0
margin_right = 847.0
margin_bottom = 546.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 1 )
custom_colors/default_color = Color( 0.509804, 0.509804, 0.509804, 1 )
custom_colors/selection_color = Color( 0.556863, 0.556863, 0.556863, 1 )
custom_colors/font_color_selected = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
bbcode_enabled = true

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 513, 188 )
scale = Vector2( 5.32813, 3.40365 )
texture = ExtResource( 5 )
hframes = 2
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../RichTextLabel")
anims/End = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 672.0
margin_top = 578.0
margin_right = 826.0
margin_bottom = 632.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "[PRESS ENTER]"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Enter01" type="TouchScreenButton" parent="."]
position = Vector2( 771, 517 )
scale = Vector2( 1.04167, 0.875 )
normal = ExtResource( 6 )

[node name="Sacrifice" type="TouchScreenButton" parent="."]
position = Vector2( 397.854, 384.211 )
rotation = -3.14159
scale = Vector2( 2.91515, 4.53345 )
normal = ExtResource( 2 )

[node name="Fight" type="TouchScreenButton" parent="."]
position = Vector2( 896, 382 )
rotation = -3.14159
scale = Vector2( 2.91515, 4.53345 )
normal = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 257, 223 )
scale = Vector2( 1.61458, 1.32292 )
texture = ExtResource( 4 )
hframes = 4
vframes = 5

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 755, 219 )
scale = Vector2( 1.44792, 1.28125 )
texture = ExtResource( 7 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Enter01" to="." method="_on_Enter01_pressed"]
[connection signal="pressed" from="Enter01" to="Enter01" method="_on_Enter01_pressed"]
[connection signal="pressed" from="Sacrifice" to="." method="_on_Sacrifice_pressed"]
[connection signal="pressed" from="Fight" to="." method="_on_Fight_pressed"]
